# liquidacion-cli

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DISCLAIMER.md  LICENSE  QWEN.md  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml
.hermes/plans/: 2026-06-20_112026-repo-cleanup-audit.md
Contexto/KB_LLM/: 00_fuente_de_verdad.md  01_reglas_calculo.md  02_parametros_vigentes.md  03_compliance_blocking.md  04_schema_entrada.md  05_plantillas.md  05_schema_salida.md  06_riesgos_modelo.md  07_checklist_generacion_liquidacion.md  08_arquitectura_segundo_cerebro.md  09_caso_canonico_usuario.md
Contexto/prompts/: prompt_auditoria_antes_de_responder.md  prompt_generacion_liquidacion.md  prompt_plan_modernizacion.md
Planificación/: Casos.md  Estructura.ini  REGISTRY.md  REGISTRY_LOG.md  addendum_fase3_arquitectura_2026-06-14.md  addendum_finiquito_renuncia_vacaciones_2026-06-11.md  addendum_sl2630_y_ipc_2026-06-09.md  plan_finiquito_pedro_giraldo.md  plan_modernizacion_v2.0_2026-06-09.md
audit/validacion_v2/: README.md  STRATEGY.md  TEMPLATE_input.json
config/: compliance_policies.yaml  default_config.yaml  logging_config.yaml  production_logging_config.yaml
docs/: DEPLOYMENT_GUIDE.md  README.md  SESION_15_DOCUMENTACION_TECNICA_COMPLETA.md  TESTING_GUIDE.md  VERSIONING_STRATEGY.md  api_reference.md  architecture.md  code_quality_analysis.md  configuration.md  developer_guide.md  engine_flow.md  legal_compliance.md  sesion19_compliance_checklist.md  user_guide.md  validation_results.json
docs/health/: system_health.json
examples/: README_examples.md  example_finca_rural.json  example_finiquito.json  example_periodo_parcial.json  example_salario_variable.json
examples/expected/: prescripcion_indexada_result.json
examples/inputs/: caso_canonico_periodico_206d.json  finiquito_renuncia_212d.json  (+3 more)
legal_docs/: CST_articulos_relevantes.md  KB_CONTRATO_VINCULO_LABORAL.md  SL2630-2024_knowledge_base.md  checklist_cumplimiento.md  leyes_vigentes.md
liquidator/: __init__.py
params/: 2025.json  2026.json  KB_Preaviso_Laboral_Fincas_Rurales.md  Respuestas.md  SESION_1_COMPLETADA.md  checklist.json  ipc_dane_mensual.json  ipc_variacion_anual_dane.csv  normas.json  plazos.json  schema.json
scripts/: build_ipc_index.py  check_kb_freshness.py  ci.sh  final_validation.py  generate_test_data.py  update_params.py  validate_compliance.py  validate_examples.py  validate_vacaciones_agreement.py
templates/: comprobante_finiquito.md
(+160 files in other folders)
